2011-11-08  Giuseppe Scrivano  <giuseppe@southpole.se>

	* src/roach.c (roach_reg_syscall): Pass correctly the DATA argument to
	the roach_make_hook function.

	* src/arch/linux_generic.c (OFFSET) [! OFFSET]: Define macro.
	* src/arch/linux_i386.c (OFFSET): Remove definition.
	* src/arch/linux_x86_64.c (OFFSET): Likewise.

	* src/roach.h (roach_get_sc): Change return type to long.
	(roach_set_sc): Likewise.
	(roach_set_sc_ret): Likewise.
	(roach_get_sc_arg): Likewise.
	(roach_set_sc_arg): Likewise.
	* src/arch/linux_generic.c (roach_get_sc): Change return type to long.
	(roach_set_sc): Likewise.
	(roach_set_sc_ret): Likewise.
	(roach_get_sc_arg): Likewise.
	(roach_set_sc_arg): Likewise.

2011-11-06  Giuseppe Scrivano  <gscrivano@gnu.org>

	* src/Makefile.am (EXTRA_DIST): Add arch/linux_i386.c and
	arch/linux_x86_64.c.

	* tests/Makefile.am (AM_CFLAGS): Specify the absolute path to src as
	argument to the compiler.

	* src/cockroach.c (cockroach_print_version): List authors in alphabetical
	order.

	* configure.ac: Fix the regex to detect the i[3456]86-*-linux-* host.

	* src/cockroach.c: Include <locale.h> for LC_ALL.

2011-11-06  Jose E. Marchesi  <jemarch@gnu.org>

	.gitignored update.
	* .gitignore: Updated.

2011-11-06  Jose E. Marchesi  <jemarch@gnu.org>

	gettextized and getoptized.
	* src/Makefile.am (AM_CPPFLAGS): Define LOCALEDIR.

	* src/cockroach.c (long_options): New variable.
	(cockroach_print_help): New function.
	(cockroach_print_version): New function.
	(main): Process command line arguments with getopt.
	(main): Initialize gettext, the program name and use close_stdout.

	* configure.ac: Generate src/config.h.

	* bootstrap.conf (gnulib_modules): Modules getopt-gnu, closeout,
	gettext, gettext-h, xalloc and progname added.

2011-11-06  Jose E. Marchesi  <jemarch@gnu.org>

	Support for multiple hardware architectures, and x86_64 added.
	* src/Makefile.am (EXTRA_libroach_a_SOURCES): Defined to allow